Release v0-6-1
==============

mtop
----


Added replication status page (screen command 'r').  This page updates
similar to the main screen.  Three types of replication status are
shown on this page: 1) master servers running on this machine, 2) slave
servers running on this machine, 3) slave servers attached to this 
master.

Changed debugging from a flag to a level.  Moved dbh connection 
into function which caches the dbh's.

Release v0-5-1
==============

mtop
----

Added new vars and stats screens.  The stats screen updates until a key
is pressed.  The vars screen shows the page and returns to the main screen.

Moved some of the common key handling routines into functions.

Reduced the amount of space statistics numbers take by only showing
2-4 significant digits.

Added mysqld memory usage for localhost in main header.  Currently uses 
/proc fs and only works for root or mysql user because either the pidfile 
may not have permissive permissions or the proc directory may not.

Release v0-4-1
==============

Makefile.PL
-----------

revision 1.8
date: 2002/02/18 05:04:53;  author: mdprewitt;
Ensure that PREFIX is used for install location instead of
SITEPREFIX.

revision 1.7
date: 2002/02/03 15:50:28;  author: mdprewitt;
Added AUTHOR/ABSTRACT definitions.  Added define to be able to track
Makefile.PL's version number in the generated Makefile.

mtop
----

revision 1.38
date: 2002/02/03 05:10:24;  author: mdprewitt;
Added documentation for the filter commands.
Uncombined the --filter-user command from the --user command.
--user looks for an equality, the filter command uses a regex.

revision 1.37
date: 2002/02/02 15:37:08;  author: mdprewitt;  
Added options to filter with regex by host/db/command/state/info

revision 1.36
date: 2002/01/27 17:07:53;  author: mdprewitt;  
Added info about broken ansi mode in win2k telnet.

revision 1.35
date: 2002/01/24 13:45:56;  author: mdprewitt;  
Fixed explanation of cache hit on help page.  It was showing the incorrect