@@ -221,11 +221,10 @@ after you are logged in.</P>
 current filters.</P>
 <P>Offer sorts by other columns</P>
 <P>For the 'More:' paging, it would be nice to support 'Less' behaviour.</P>
-<P>Add 'show status' and 'show variables' output.</P>
 <P>Add support for saving commandline opts in ~/.mtop</P>
 <P>Add 'n' command and properly calculate number of lines on screen.</P>
 <PRE>
-    $Id: mtop.PL,v 1.45 2002/04/29 21:30:30 mdprewitt Exp $</PRE>
+    $Id: mtop.PL,v 1.49 2002/06/30 03:18:34 mdprewitt Exp $</PRE>
 
 </BODY>
 
